<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/navigation_menu_item_home" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_baseline_manage_search_24"
        android:title="Каталог" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/navigation_menu_item_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/navigation_menu_item_profile" />

    <item
        android:id="@+id/navigation_add"
        android:title="Добавить" />
</menu>