<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/catalog_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_phone_iphone_24" />

        <TextView
            style="@style/catalog_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/smartphones" />

        <Button
            android:id="@+id/button_phone_category"
            style="@style/catalog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/catalog_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_computer_24" />

        <TextView
            style="@style/catalog_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/computers" />

        <Button
            android:id="@+id/button_computer_category"
            style="@style/catalog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/catalog_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_local_laundry_service_24" />

        <TextView
            style="@style/catalog_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/appliances" />

        <Button
            android:id="@+id/button_appliances_category"
            style="@style/catalog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/catalog_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_local_printshop_24" />

        <TextView
            style="@style/catalog_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/office_equipment" />

        <Button
            android:id="@+id/button_office_category"
            style="@style/catalog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>